--- a/style.css
+++ b/style.css
@@ -2,28 +2,6 @@
 	text-decoration: line-through solid black;
 }
 
-.button {
-	margin-left: 10px;
-	margin-top: 10px;
-	padding: 10px;
-	border-radius: 20px;
-}
-
-#buttons {
-	display: inline-block;
-	background-color: yellow;
-	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-	padding: 5px;
-	border-radius: 20px;
-	border: 1px solid;
-}
-
-#criar-tarefa {
-	margin-left: 10px;
-	padding: 10px;
-	border-radius: 20px;
-}
-
 .destacado {
 	background-color: grey;
 }
@@ -59,27 +37,68 @@ h1 {
 	border-radius: 20px;
 }
 
+/* BOTÕES */
+
+.button {
+	margin-left: 10px;
+	margin-top: 10px;
+	padding: 10px;
+	border-radius: 20px;
+}
+
+#buttons {
+	display: inline-block;
+	background-color: yellow;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+	padding: 5px;
+	border-radius: 20px;
+	border: 1px solid;
+}
+
+#criar-tarefa {
+	margin-left: 10px;
+	padding: 10px;
+	border-radius: 20px;
+}
+
 #remover-selecionado{
 	background-color: rgb(248, 66, 102);
 	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #mover-cima{
 	color: white;
 	background-color: mediumslateblue;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #mover-baixo{
 	color: white;
 	background-color: mediumslateblue;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #remover-finalizados{
 	background-color: rgb(248, 66, 102);
 	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #apaga-tudo{
 	background-color: rgb(248, 66, 102);
 	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#salvar-tarefas {
+	background-color: green;
+	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+#carrega-tarefas {
+	background-color: green;
+	color: white;
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
